--- a/rozin-mirror/style.css
+++ b/rozin-mirror/style.css
@@ -4,12 +4,12 @@ html, body {
 }
 canvas {
   display: block;
-  border: 10px solid red;
+  border: 10px solid green;
   box-shadow: 0 10px 20px -10px;
 
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%); scale:(0.5) ;
+  transform: translate(-50%, -50%) scale(0.5);
 
 }
